# KubERA

./: .gitignore  Dockerfile  Makefile  PLAYGROUND.md  README.md  app.py  cleanup_db.py  dashboard-deploy.yaml  db.py  generate_prom_data.py  investigate.py  k8s_assistant_persona.py  kind-config.yaml  pyproject.toml  reset_db.py  schema.md  setup-kind-registry.sh  setup-playground.sh  test_prometheus.py
.github/workflows/: create-cluster.yaml  destroy-cluster.yaml
agent/: data_anonymizer.py  llm_agent.py  react_agent.py  react_hypothesis.py  react_information_gatherer.py
agent/tools/: argocd_tool.py  docker_tool.py  k8s_tool.py  prometheus_tool.py
k8s/: argocd-demo-apps.yaml  argocd.yaml  broken-pod.yaml  prometheus.yaml  test-workloads.yaml
server/: main.py
static/css/: styles.css
static/js/: argocd-analysis.js  dashboard.js  kubera-console-terminal.js  kubera-terminal-left-panel.js  kubera-utils.js  timeline.js
templates/: analyze.html  index.html
terraform/: applications.tf  eks.tf  irsa.tf  main.tf  outputs.tf  variables.tf  vpc.tf
