[project]
name = "kubera"
version = "0.1.0"
description = "Kubernetes Event & Root cause Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "authlib==1.3.1",
  "dash>=2.18.2",
  "dash-auth==2.3.0",
  "flask==3.0.0",
  "gunicorn==23.0.0",
  "matplotlib>=3.10.1",
  "openai>=1.73.0",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "psycopg2-binary>=2.9.10",
  "python-dateutil>=2.9.0.post0",
  "rich>=14.0.0",
  "sqlalchemy>=2.0.40",
  "statsmodels>=0.14.4",
  "streamlit>=1.44.1",
]
